--- a/app/views/ads/_search_result_box.html.erb
+++ b/app/views/ads/_search_result_box.html.erb
@@ -5,8 +5,9 @@
             kartet, eller endre på søkefilterene dine.
         </p>
     <% else %>
-        <%= render partial: "search_result_item", collection: @ads, as: 'ad' %>
-        <div class="search-result-box__paging-holder u-push-down-only"><%= paginate @ads %></div>
+        <% cache do %>
+            <%= render partial: "search_result_item", collection: @ads, as: 'ad' %>
+            <div class="search-result-box__paging-holder u-push-down-only"><%= paginate @ads %></div>
+        <% end %>
     <% end %>
 </div>
-
