--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,16 @@
 <div class="container">
     <div class="row">
         <div class="twelve columns">
+
+            <%= render layout: "gray_box", locals: {title: "Min oversikt"} do %>
+                <p>
+                    Her får du en oversikt over den siste aktiviteten på plendit
+                    som er relevant for deg.
+                </p>
+                <%= link_to 'Se min offentlige profil', user_path(current_user), class: 'button' %>
+                <%= button_to 'Legg ut en ny annonse', new_ad_path, method: 'get', class: 'button button-primary', form_class: 'u-inline' %>
+            <% end %>
+
             <%= render layout: "bubble_box", locals: {title: "Mine annonser"} do %>
                 <% unless current_user.ads.empty? %>
                     <ul>
