Better styling for my ads. Still missing some button lovin'

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,3 +75,17 @@ summary {
     border: solid 3px white;
     box-shadow: $subtle-shadow;
 }
+
+.status-label {
+    &--green {
+        color: $color-state-green;
+    }
+
+    &--yellow {
+        color: $color-state-yellow;
+    }
+
+    &--red {
+        color: $color-state-red;
+    }
+}
