--- a/app/views/shared/_image_manager_item.html.erb
+++ b/app/views/shared/_image_manager_item.html.erb
@@ -1,25 +1,20 @@
 <div class="image-manager__item row">
-    <div class="five columns image-manager__thumb-box">
-        <%= image_tag ad_image.image.url(:thumb), width: "100%", class: "image-manager__thumb" %>
+    <div class="three columns image-manager__thumb-box">
+        <%= image_tag ad_image.image.url(:thumb), class: 'image-manager__thumb' %>
     </div>
-    <div class="seven columns image-manager__controls">
+    <div class="nine columns image-manager__controls">
         <%= form_for(ad_image, url: ad_image_path(ad_image),  data: {controller: 'imageDescriptionAutoSaver'}) do |f| %>
-            <%= f.text_area :description, placeholder: 'Bildetekst', class: "u-full-width" %>
+            <%= f.text_area :description, placeholder: 'Bildetekst', class: 'u-full-width' %>
             <%= f.hidden_field :previous_url, value: request.fullpath %>
             <%#= f.submit 'Lagre bildetekst' %>
         <% end %>
 
+ 
         <% if ad_image_counter != 0 %>
-            <%= button_to make_primary_ad_image_path(ad_image), class: "button image-manager__primary-button u-pull-right" do %>
-                <%= image_tag 'image_main.png', size: "15x15" %>
-                Sett som hovedbilde
-            <% end %>
+            <%= button_to 'hovedbilde', make_primary_ad_image_path(ad_image), class: 'button image-manager__button', form_class: 'u-inline' %>
         <% end %>
 
-        <%= button_to ad_image_path(ad_image), method: :delete, params: {previous_url: request.fullpath}, class: "button image-manager__delete-button udd-pull-right" do %>
-            <%= image_tag 'image_delete.png', size: "12x15" %>
-            Slett
-        <% end %>
+        <%= button_to 'Slett', ad_image_path(ad_image), method: :delete, params: {previous_url: request.fullpath}, class: 'button image-manager__button', form_class: 'u-inline' %>
 
     </div>
     <hr>
