--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Feedback</h1>
+<div class="container">
+    <div class="row">
+        <div class="eight columns">
+            <h2 class="u-push-down">Gi tilbakemelding til <%= @ad.user.display_name %></h2>
+            <%= render partial: 'feedback_form' %>
+        </div>
+        <div class="four columns">
+            <div class="u-push-down">
+                <%= render partial: 'shared/sidebar_profile_summary', locals: { user: @ad.user } %>
+                <%= render partial: 'shared/profile_quality_box', locals: { user: @ad.user } %>
+            </div>
+        </div>
+    </div>
+</div>
 
-<%= render 'form' %>
+<%#= render 'form' %>
 
-<%= link_to 'Back', users_feedbacks_path %>
+<%#= link_to 'Back', users_feedbacks_path %>
