Utility class for aligning icons

--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -401,6 +401,10 @@ form {
   display: inline;
 }
 
+.u-v-bottom {
+  vertical-align: bottom;
+}
+
 .u-link-like {
   color: $color-plendit-blue;
   text-decoration: underline;
