Added basic markup for new profile page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -212,3 +212,28 @@
 
 }
 
+.biz-card {
+    background-color: white;
+    padding: $standard-spacing;
+}
+
+
+.user-verifications {
+    background-color: white;
+    padding: $standard-spacing;
+
+    &__list {
+        list-style: none;
+    }
+
+    &__action-link {
+        display: inline-block;
+        width: 130px;
+    }
+}
+
+
+.user-identities {
+    background-color: white;
+    padding: $standard-spacing;
+}
