Added help text stuff for profile

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -230,6 +230,11 @@
         display: inline-block;
         width: 130px;
     }
+
+    &__help-link {
+        font-size: small;
+        text-decoration: underline;
+    }
 }
 
 
