--- a/app/views/users/private_profile.html.erb
+++ b/app/views/users/private_profile.html.erb
@@ -29,10 +29,36 @@
                 <ol class="user-verifications__list">
                     <li>
                         <%= link_to 'Telefonnummer', '#', class: 'user-verifications__action-link' %>
-                        <%= evil_icon 'ei-exclamation', size: :t, class: 'u-fill-red u-v-bottom' %>
-                        Ikke verifisert <span class="user-verifications__help-link" data-help-label-for="phone">(hvorfor?)</span>
+                        
+                        <% if @user.phone_verified? %>
+                            <%= evil_icon 'ei-check', size: :t, class: 'u-fill-green u-v-bottom' %> Verifisert
+                        <% else %>
+                            <%# todo: state when it's sent and waiting for pin to be entered %> 
+                            <%= evil_icon 'ei-exclamation', size: :t, class: 'u-fill-red u-v-bottom' %>
+                            Ikke verifisert
+                            <span class="user-verifications__help-link" data-help-label-for="phone">(hvorfor?)</span>
+                        <% end %>
+
                         <div class="user-verifications__help u-hidden" data-help-text-for="phone">
                             Vi trenger et bekreftet telefonnumer før du kan
+                            leie, eller leie ut, på plendit.
+                            <a href="#" target="_blank">Les mer.</a>
+                        </div>
+                    </li>
+                    <li>
+                        <%= link_to 'E-post', '#', class: 'user-verifications__action-link' %>
+                        
+                        <% if @user.email_verified? %>
+                            <%= evil_icon 'ei-check', size: :t, class: 'u-fill-green u-v-bottom' %> Verifisert
+                        <% else %>
+                            <%# todo: state when it's sent and waiting for pin to be entered %> 
+                            <%= evil_icon 'ei-exclamation', size: :t, class: 'u-fill-red u-v-bottom' %>
+                            Ikke verifisert
+                            <span class="user-verifications__help-link" data-help-label-for="email">(hvorfor?)</span>
+                        <% end %>
+
+                        <div class="user-verifications__help u-hidden" data-help-text-for="email">
+                            Vi trenger en bekreftet e-postadresse før du kan
                             leie, eller leie ut, på plendit.
                             <a href="#" target="_blank">Les mer.</a>
                         </div>
@@ -46,7 +72,6 @@
                             Vi trenger bilde av førerkort for at du skal kunne leie motorkjøretøy.
                             <a href="#" target="_blank">Les mer.</a>
                         </div>
-
                     </li>
                     <li>
                         <%= link_to 'Identitetskort', '#', class: 'user-verifications__action-link' %>
