--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,30 +29,37 @@
 
 .u-fill-green {
     fill: green;
+    color: green;
 }
 
 .u-fill-red {
     fill: red;
+    color: red;
 }
 
 .u-fill-blue {
     fill: #2a96ff;
+    color: #2a96ff;
 }
 
 .u-fill-gray {
     fill: gray;
+    color: gray;
 }
 
 .u-fill-gold {
     fill: gold;
+    color: gold;
 }
 
 .u-fill-brown {
     fill: #a56800;
+    color: #a56800;
 }
 
 .u-fill-white {
     fill: white;
+    color: white;
 }
 
 select[disabled] {
