Added basic views for uploading drivers license

--- a/app/views/users/private_profile.html.erb
+++ b/app/views/users/private_profile.html.erb
@@ -67,7 +67,7 @@
                         </div>
                     </li>
                     <li>
-                        <%= link_to 'Førerkort', '#', class: 'user-verifications__action-link' %>
+                        <%= link_to 'Førerkort', verify_drivers_license_users_path, class: 'user-verifications__action-link' %>
                         <%= icon 'check-circle', 'Verifisert', class: 'fa-lg u-fill-green u-v-bottom' %>
 
                         <span class="user-verifications__help-link" data-help-label-for="drivers-permit">
